@@ -5,6 +5,7 @@ deprecated_FCN_FILES = \
   deprecated/find_dir_in_path.m \
   deprecated/finite.m \
   deprecated/fmod.m \
+  deprecated/fnmatch.m \
   deprecated/isstr.m \
   deprecated/nfields.m \
   deprecated/strmatch.m \
